# qt-photoalbum

./: .gitignore  CMakeLists.txt  README.md  confirmpage.ui  const.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opentreethread.cpp  opentreethread.h  picanimationwidget.cpp  picanimationwidget.h  picbutton.cpp  picbutton.h  picshow.cpp  picshow.h  picshow.ui  picstatebtn.cpp  picstatebtn.h  prelistitem.cpp  prelistitem.h  prelistwidget.cpp  prelistwidget.h  prosetpage.cpp  prosetpage.h  prosetpage.ui  protree.cpp  protree.h  protreeitem.cpp  protreeitem.h  protreethread.cpp  protreethread.h  protreewidget.cpp  protreewidget.h  removeprodialog.cpp  slideshowdialog.cpp  slideshowdialog.h  slideshowdialog.ui  wizard.cpp  (+2 more)
style/: style.qss
